# text2cli

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  config.example.toml
.claude/: settings.local.json
.github/workflows/: ai-review.yml  ci.yml  copilot-review.yml
docs/superpowers/plans/: 2026-05-27-text2cli-implementation.md
docs/superpowers/specs/: 2026-05-27-agent-proxy-cli-design.md  2026-05-28-shell-hook-implementation-design.md
shell/: text2cli.bash  text2cli.ps1  text2cli.zsh
src/: cache.rs  config.rs  context.rs  error.rs  executor.rs  lib.rs  main.rs  parser.rs  selector.rs  session.rs
src/agents/: claude.rs  codex.rs  generic.rs  mod.rs
src/shell/: bash.rs  mod.rs  pwsh.rs  zsh.rs
tests/: agent_test.rs  cli_test.rs  config_test.rs  context_test.rs  error_test.rs  executor_test.rs  integration_tests.rs  parser_test.rs  shell_test.rs
tests/fixtures/: config.toml
